--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".navigation_activity.TeacherActivity">
+        </activity>
         <activity android:name=".MainActivity">
         </activity>
         <activity android:name=".LoginActivity">
