레이아웃 디자인 변경
1. Appbar 적용
2. 전체 디자인 수정
3. Teacher chatText 엔터키로 전송되게 수정
4. Min Api Level 26 -> 23
5. Diary feed 틀만 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,17 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".navigation_activity.TeacherActivity">
+        <activity
+                android:name=".navigation_activity.DiaryActivity"
+                android:windowSoftInputMode="adjustResize">
+        </activity>
+        <activity
+                android:name=".navigation_activity.TeacherActivity"
+                android:windowSoftInputMode="adjustResize"
+                android:parentActivityName=".MainActivity">
+                <meta-data
+                        android:name="android.support.PARENT_ACTIVITY"
+                        android:value="e.pshkh.what_is_it.MainActivity"/>
         </activity>
         <activity android:name=".MainActivity">
         </activity>
@@ -27,4 +37,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
