다이어리 추가 개선
1. 다이어리 추가 안되던것 개선 -> messageDTOs의 문제로 파악
2. 다이어리에 추가된 메시지옆에 추가됨 표시 (종종 순서가 어긋남)
3. 채팅방 레이아웃 개선(말풍선 Invisible > gone, 말풍선 최대크기 제한)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
-                android:name=".navigation_activity.DiaryActivity"
+                android:name=".navigation_activity.DiaryFragment"
                 android:windowSoftInputMode="adjustResize">
         </activity>
         <activity
