--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     // API 서버에 요청
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.android.support:support-v4:26.1.0'
 
 }
