다이어리 더보기 구현
다이어리 리싸이클러뷰에서 카드뷰로 변경
다이어리 항목 클릭시 더보기 가능
다이어리 더보기에서 삭제, 공유버튼 구현 (작동은 안함)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,16 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
-                android:name=".navigation_activity.DiaryFragment"
-                android:windowSoftInputMode="adjustResize">
+                android:name=".diaryMoreViewActivity"
+                android:label="@string/title_activity_diary_more_view">
         </activity>
         <activity
                 android:name=".navigation_activity.TeacherActivity"
-                android:windowSoftInputMode="adjustResize"
-                android:parentActivityName=".MainActivity">
-                <meta-data
-                        android:name="android.support.PARENT_ACTIVITY"
-                        android:value="e.pshkh.what_is_it.MainActivity"/>
+                android:parentActivityName=".MainActivity"
+                android:windowSoftInputMode="adjustResize">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="e.pshkh.what_is_it.MainActivity"/>
         </activity>
         <activity android:name=".MainActivity">
         </activity>
