--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,6 @@ dependencies {
     // API 서버에 요청
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 
 }
