--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,32 +28,39 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 
-
+    // crop Image 라이브러리
+    implementation 'com.android.support:animated-vector-drawable:26.1.0'
+    implementation 'com.android.support:exifinterface:26.1.0'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.5.0'
+    implementation 'com.otaliastudios:cameraview:1.6.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    // 파이어베이스
     implementation 'com.google.firebase:firebase-auth:15.0.0'
     implementation 'com.google.firebase:firebase-firestore:15.0.0'
     implementation 'com.google.firebase:firebase-storage:15.0.0'
     implementation 'com.google.firebase:firebase-database:15.0.0'
     implementation 'com.google.firebase:firebase-ml-vision:15.0.0'
     implementation 'com.google.firebase:firebase-ml-vision-image-label-model:15.0.0'
-
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-
+    
     // 다이얼로그 플로우
     implementation 'ai.api:libai:1.6.12'
 
     // Json 파싱을 위함
     implementation 'com.google.code.gson:gson:2.8.5'
+
     // API 서버에 요청
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
-    implementation 'com.android.support:support-v4:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
+
+    // 이미지 라이브러리
     implementation 'com.github.bumptech.glide:glide:4.0.0'
 
 }
