--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,9 @@ dependencies {
 
     // 이미지 라이브러리
     implementation 'com.github.bumptech.glide:glide:4.0.0'
+
+    //Kotlin coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
