--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-
+        <activity android:name=".PhotoViewActivity">
+        </activity>
         <activity
-                android:name=".diaryMoreViewActivity"
+                android:name=".DiaryMoreViewActivity"
                 android:label="@string/title_activity_diary_more_view">
         </activity>
         <activity
@@ -28,8 +29,9 @@
                     android:name="android.support.PARENT_ACTIVITY"
                     android:value="e.pshkh.what_is_it.MainActivity"/>
         </activity>
-        <activity android:name=".MainActivity"
-                  android:theme="@style/AppTheme.NoActionBar">
+        <activity
+                android:name=".MainActivity"
+                android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
                 android:name=".LoginActivity"
@@ -41,7 +43,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity" />
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"/>
     </application>
 
 </manifest>
